syntax = "proto3";
package proto;


message CreateUserInput {
    string username=1;
    string email=2;
    string name=3;
}

message CreateUserOutput {
    string retmessage=1;
    bool res=2;
}

service MessengerService {
    rpc CreateUser(CreateUserInput) returns (CreateUserOutput) {}
}